--- a/style.css
+++ b/style.css
@@ -1,30 +1,55 @@
+/* estilização */
 body { 
-    background-color: rgb(173, 74, 148);
-    text-align: center; 
-    font-family: 'Times New Roman', Times, serif;
+  font-family: 'Times New Roman', Times, serif;
+  margin: 5 auto;
+  padding: 0%;
 }  
 
-.form-container { 
-    max-width: 600px;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
+h1 { 
+    color: black;
+    text-align: center;
 }
 
-.titulo { 
-    font-size: medium;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: 200;
-    font-style: normal;
+h2 { 
+    text-align: center;
 }
 
-    button { 
-        padding: 0%;
-        background-color: blueviolet;
-        border: none;
-        color: white; 
-        border-radius: 5px; 
-        cursor: pointer; 
+p { 
+    line-height: 1.6;
+}
+
+.container { 
+    display: flex;
+    box-sizing: border-box;
+    padding: 20px auto;
+    align-items: center;
+    gap: 20px;
+}
+
+.imagem-container { 
+    width: 90%;
+    max-width: 200px;
+    margin: 12px;
+    border-radius: 8px;
 } 
 
+.texto {
+    max-width: 600px;
+} 
+
+.texto h3 { 
+    margin: 0 0 10px 0;
+} 
+
+.texto p {
+    margin: 0;
+}
+
+footer{
+    color: rgb(250, 250, 250);
+    background-color: rgb(100, 175, 100);
+}
+
+paragrafo { 
+
+}
